--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-runtime": "^5.8.25",
     "classnames": "^2.2.0",
     "css-loader": "^0.19.0",
+    "element-resize-detector": "^1.1.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "ff-url-finder": "^2.3.0",
     "file-loader": "^0.8.4",
